youfull/objects/SummaryOverlay_Row_Config__c.object
<CustomObject>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EG0__c</fullName>
        <label>EG0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EG1__c</fullName>
        <label>EG1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EG2__c</fullName>
        <label>EG2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EG4PLUS__c</fullName>
        <label>EG4PLUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Data_Type__c</fullName>
        <label>Executive_Data_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Row_Label__c</fullName>
        <label>Executive_Row_Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G0__c</fullName>
        <label>G0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G1__c</fullName>
        <label>G1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G2__c</fullName>
        <label>G2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Market_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Market Tag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipName>SummeryOverlay_Row_Configs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Row_Label__c</fullName>
        <label>Row_Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Order__c</fullName>
        <description>For Ordering of Rows</description>
        <label>Row Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SummaryOverlay Row Config</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>SummaryOverlay Row Config Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SummaryOverlay Row Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>